--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
             // Create AudioContext
             window.AudioContext = window.AudioContext || window.webkitAudioContext;
             var audioContext = new AudioContext();
+            var audioSampleRate = audioContext.sampleRate;
+            console.log('sample rate: ' + audioSampleRate);
 
             // Define function called by getUserMedia
             function startUserMedia(stream) {
