upd8: succeed recording wav files into the form as Baidu API required.

--- a/src/index.html
+++ b/src/index.html
@@ -4,97 +4,12 @@
     <head>
         <meta charset="utf-8">
         <title>echo.js</title>
-        <script type="text/javascript" src="lib/vad.js"></script>
-        <script type="text/javascript" src="lib/binary.js"></script>
+        <script type="text/javascript" src="./lib/vad.js"></script>
+        <script type="text/javascript" src="./lib/binary.js"></script>
     </head>
 
     <body>
-        <script type="text/javascript">
-            // Create AudioContext
-            window.AudioContext = window.AudioContext || window.webkitAudioContext;
-            var audioContext = new AudioContext();
-            var audioSampleRate = audioContext.sampleRate;
-            console.log('sample rate: ' + audioSampleRate);
-
-            // Define function called by getUserMedia
-            function startUserMedia(stream) {
-                // Create MediaStreamAudioSourceNode
-                var source = audioContext.createMediaStreamSource(stream);
-
-                // Recorder
-                var recorder = new recordAudio(source);
-
-                // Setup options
-                var options = {
-                    source: source,
-                    voice_stop: function () {
-                        console.log('voice_stop');
-                        recorder.stop();
-                    },
-                    voice_start: function () {
-                        console.log('voice_start');
-                        recorder.start();
-                    }
-                };
-
-                // Create VAD
-                var vad = new VAD(options);
-            }
-
-            // Ask for audio device
-            navigator.getUserMedia = navigator.getUserMedia ||
-                navigator.mozGetUserMedia ||
-                navigator.webkitGetUserMedia;
-            navigator.getUserMedia({
-                audio: true
-            }, function (stream) { // onSuccess
-                startUserMedia(stream);
-            }, function (e) { // onError
-                console.log('No live audio input in this browser: ' + e);
-            });
-
-            // Record audio
-            function recordAudio(stream) {
-                var bufferLen   = 2048,
-                    numChannels = 1;
-                this.context = stream.context;
-                var recording = false;
-                this.node = (this.context.createScriptProcessor ||
-                    this.context.createJavaScriptNode).call(this.context,
-                    bufferLen, numChannels, numChannels);
-
-                stream.connect(this.node);
-                this.node.connect(this.context.destination);
-
-                function convertFloat32ToInt16(buffer) {
-                    l = buffer.length;
-                    buf = new Int16Array(l);
-                    while (l--) {
-                        buf[l] = Math.min(1, buffer[l]) * 0x7FFF;
-                    }
-                    return buf.buffer;
-                }
-
-                this.node.onaudioprocess = function (e) {
-                    if (!recording) return;
-
-                    // Since numChannels is 1
-                    window.wstream.write(convertFloat32ToInt16(e.inputBuffer.getChannelData(0)));
-                };
-
-                this.start = function () {
-                    recording = true;
-                    window.wstream = window.wclient.createStream();
-                };
-
-                this.stop = function () {
-                    recording = false;
-                    window.wstream.end();
-                };
-            }
-
-            window.wclient = new BinaryClient('ws://127.0.0.1:9001');
-        </script>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 
 </html>
