upd8: socket.io, audio play.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <title>echo.js</title>
         <script type="text/javascript" src="./lib/vad.js"></script>
         <script type="text/javascript" src="./lib/binary.js"></script>
+        <script type="text/javascript" src="./lib/socket.io.js"></script>
     </head>
 
     <body>
