--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,18 @@
     <head>
         <meta charset="utf-8">
         <title>echo.js</title>
+        <style>
+            body {
+                text-align: center;
+            }
+        </style>
         <script type="text/javascript" src="./lib/vad.js"></script>
         <script type="text/javascript" src="./lib/binary.js"></script>
         <script type="text/javascript" src="./lib/socket.io.js"></script>
     </head>
 
     <body>
+        <canvas id="speechBufferCanvas" width="800" height="50"></canvas>
         <script type="text/javascript" src="main.js"></script>
         <!-- <script type="text/javascript" src="bundle.js"></script> -->
     </body>
